# derisk-solana

./: .gitignore  .pylintrc  Dockerfile.api  Dockerfile.call-to-actions  Dockerfile.current-transactions-collector  Dockerfile.data-processing  Dockerfile.db  Dockerfile.db-init  Dockerfile.event_processing  Dockerfile.frontend  Dockerfile.historical-transactions-collector  Dockerfile.kamino-parser  Dockerfile.kamino_event_processing  Dockerfile.liquidable_debt_processing  Dockerfile.liquidity-normalizer  Dockerfile.loan_states  Dockerfile.mango-parser  Dockerfile.marginfi-parser  Dockerfile.marginfi-parserV2  Dockerfile.ob-liq-fetching  Dockerfile.parsing-pipeline  Dockerfile.parsing_pipeline  Dockerfile.raw-data-fetching  Dockerfile.signature-collection  Dockerfile.signature-collector  Dockerfile.solend-loan-states-collection  Dockerfile.solend-parser  Dockerfile.token-supplies-fetching  Dockerfile.ts-fetcher  Dockerfile.tx-fetcher-current  Dockerfile.tx-fetcher-hist  Dockerfile.tx-fetcher-hist-quick  Dockerfile.update-amm-pools  LICENSE.txt  README.md  db_model.py  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  (+1 more)
api/: __init__.py  db.py  extensions.py  liquidity.py  main.py  utils.py
db/: __init__.py  schema.sql  utils.py
event-aggregator/: main.py
notebooks/: MF_parsed_show_case.ipynb  data_parser.ipynb  kamino_liquidable_debt.ipynb  klend_show_case.ipynb  mango_processing.ipynb  marginfi_processing.ipynb  solana_data.ipynb  solana_ob_liquidity.ipynb  solana_transaction_program_data_parser.ipynb  solana_transactions.ipynb  tmp.ipynb
src/: amms.py  (+23 more)
(+317 files in other folders)
