[tool.poetry]
name = "derisk-solana"
version = "0.1.0"
description = "DeRisk - Risk monitoring and insurance against bad debt."
authors = ["Lukas Petrasek <lukas@carmine.finance>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
solana = "^0.31.0"
sqlalchemy = "^2.0.25"
pandas = "^2.2.0"
flask = "^3.0.1"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
